--- a/DoubleA/DoubleA/AnimeDetailsPage.xaml
+++ b/DoubleA/DoubleA/AnimeDetailsPage.xaml
@@ -6,7 +6,8 @@
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+                HorizontalOptions="CenterAndExpand"
+                x:Name="lblAnimeTitle" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
